2004-05-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/feta-klef.mf: 
	* mf/feta-bolletjes.mf: Oops.  Comment-out canvast test code.

	* Documentation/user/programming-interface.itely: Use @emph (was: @em).

	* Documentation/user/out/tutorial.texi: Untrigger lilypond-book error.

2004-05-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/output-tex.scm (output-tex-string): tighten safe security.

	* lily/scm-option.cc (LY_DEFINE): add 'safe to ly:get-option

	* scm/safe-lily.scm (make-safe-lilypond-module): new file. Define
	allowed ly functions.

	* lily/ly-module.cc (ly_module_define): only define variable if
	bound.
	(ly_make_anonymous_module): take safe option.

2004-05-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (compose_ly): remove FRAGMENT_LY.

2004-05-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/newaddlyrics.ly: Fix.

	* Documentation/user/tutorial.itely: Use \newlyrics, remove most
	\score \notes.

2004-05-08  Heikki Junes <hjunes@cc.hut.fi>

        * Documentation/user/music-glossary.tely ([k-z]): last fixes.

2004-05-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/mutopia/R.Schumann/romanze-op28-2.ly (d): use #(define .. )

	* lily/paper-line.cc (Paper_line): don't store list of stencils,
	but convert to single Stencil immediately.

	* lily/paper-book.cc (title): don't return Stencil* but Stencil.

2004-05-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-sodipodi.scm: Resurrect sodipodi output.

2004-05-07  Kristof Bastiaensen  <kristof.bastiaensen@vleeuwen.org>

	* elisp/lilypond-mode.el: Changed the way defaults are created for
	LilyPond-command-master.  LilyPond-mode will now check the
	timestamps of the files to see which command has to run next.

2004-05-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/bass-figure.scm (format-bass-figure): don't set
	number-markup for strings. This fixes string in bass
	figure. (backportme)

	* lily/parser.yy (bass_number): insert number-markup into figure